opensearch/operator/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch
  namespace: opensearch
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - opensearch.lab.qstetten.de
      secretName: opensearch-http-cert
  rules:
    - host: "opensearch.lab.qstetten.de"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-cluster
                port:
                  number: 9200
